# rust_design_model

./: .gitignore  Cargo.toml  README.md  run.sh
anti-patterns/: Cargo.toml
anti-patterns/examples/: clone_to_satisfy_the_borrow_checker.rs  deref_of_polymorphism.rs
builder/src/: main.rs
builders/src/: main.rs
command/src/: main.rs
idioms/: Cargo.toml
idioms/examples/: borrowed_types.rs  closure_variables.rs  collection_are_smart_point.rs  constructor.rs  dynamic_dispatch.rs  enum_take_replace.rs  finalisation_destructors.rs  foreign_function_interface.rs  format_string.rs  option_iterating.rs  temporary_mutability.rs
