[workspace]

members = [
    "idioms",
    "commands",
    "builders",
    "anti-patterns",
    "design-patterns-rust/behavioral/chain-of-responsibility",
    "design-patterns-rust/behavioral/command",
    "design-patterns-rust/behavioral/iterator",
    "design-patterns-rust/behavioral/mediator",
    "design-patterns-rust/behavioral/memento",
    "design-patterns-rust/behavioral/observer",
    "design-patterns-rust/behavioral/state",
    "design-patterns-rust/behavioral/strategy",
    "design-patterns-rust/behavioral/template-method",
    "design-patterns-rust/behavioral/visitor",
    "design-patterns-rust/creational/abstract-factory/app",
    "design-patterns-rust/creational/abstract-factory/app-dyn",
    "design-patterns-rust/creational/builder",
    "design-patterns-rust/creational/factory-method/maze-game",
    "design-patterns-rust/creational/factory-method/render-dialog",
    "design-patterns-rust/creational/prototype",
    "design-patterns-rust/creational/simple-factory",
    "design-patterns-rust/creational/singleton/how-to-create",
    "design-patterns-rust/creational/singleton/logger",
    "design-patterns-rust/creational/static-creation-method",
    "design-patterns-rust/structural/adapter",
    "design-patterns-rust/structural/bridge",
    "design-patterns-rust/structural/composite",
    "design-patterns-rust/structural/decorator",
    "design-patterns-rust/structural/facade",
    "design-patterns-rust/structural/flyweight",
    "design-patterns-rust/structural/proxy"
]
